# Shell

./: .gitignore  CMakeLists.txt  Kconfig  Makefile  README.md
.github/workflows/: c-cpp.yml  cmake.yml  format.yml  lint.yml
include/: argparse.h  command.h  dir.h  err_no.h  help.h  name.h  os.h  printsh.h  printsh_log.h
include/commands/: cd.h  help.h  history.h  pr_log.h
include/config/: config.h
src/: build.sh  cd.cpp  cd.h  command.cpp  command.h  commands.cpp  commands.h  help.h  main.cpp  makefile
src/commands/: cd.cpp  help.cpp  history.cpp  pr_log.cpp
src/include/: printsh.h
src/modules/: argparse.cpp  command.cpp  dir.cpp  name.cpp  os.cpp  printsh.cpp  printsh_log.cpp
templates/: README.md
templates/command_template/: example.cpp  example.h
templates/module_template/: example.cpp  example.h
tools/: build_cmake.sh  clean_cmake.sh  get_version.py
